added button function

--- a/4-index.html
+++ b/4-index.html
@@ -10,6 +10,12 @@
   <body>
     <button>Button</button>
     <!-- internal js -->
-    <script></script>
+    <!--<script>
+      const btn = document.querySelector("button");
+btn.addEventListener("click", function () {
+  document.body.style.backgroundColor = "olivedrab";
+});
+    </script>-->
+    <script src="4-app.js"></script>
   </body>
 </html>
